--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Test</title>
+        <script type="text/javascript" src="/js/nameChecker.js"></script>
+        <script type="text/javascript" src="/js/formHandler.js"></script>
         <link rel="stylesheet" href="/styles/resets.css">
         <link rel="stylesheet" href="/styles/base.css">
         <link rel="stylesheet" href="/styles/header.css">
@@ -27,7 +29,7 @@
                     <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name">
                     <input type="submit" name="" value="submit" onclick="return handleSubmit(event)" onsubmit="return handleSubmit(event)">
                 </form>
-            <section>
+            </section>
 
             <section>
                 <strong>Form Results:</strong>
